objects/Scheduled_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Any additional details, clarification, and/or notes to provide more specifics about the scheduled job</description>
        <inlineHelpText>Any additional details, clarification, and/or notes to provide more specifics about the scheduled job</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>Ultimately, which domain/team oversees and owns this functionality being scheduled?</description>
        <inlineHelpText>Ultimately, which domain/team oversees and owns this functionality being scheduled?</inlineHelpText>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domain_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <description>The rate at which this specific logic should run within the context of a single day.</description>
        <inlineHelpText>The rate at which this specific logic should run within the context of a single day.</inlineHelpText>
        <label>Interval</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Every 5 Minutes</fullName>
                </value>
                <value>
                    <fullName>Every 10 Minutes</fullName>
                </value>
                <value>
                    <fullName>Every 15 Minutes</fullName>
                </value>
                <value>
                    <fullName>Every 30 Minutes</fullName>
                </value>
                <value>
                    <fullName>Every Hour</fullName>
                </value>
                <value>
                    <fullName>Specific Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace_Prefix__c</fullName>
        <description>If you do not know what this is, leave it blank. It should be used for a very specific purpose around packages</description>
        <inlineHelpText>If you do not know what this is, leave it blank. It should be used for a very specific purpose around packages</inlineHelpText>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Time__c</fullName>
        <description>This field will only be respected if you selected &quot;Specific Time&quot; in the Interval field</description>
        <inlineHelpText>This field will only be respected if you selected &quot;Specific Time&quot; in the Interval field</inlineHelpText>
        <label>Specific Time</label>
        <type>Time</type>
    </fields>
    <label>Scheduled Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Interval__c</columns>
        <columns>Specific_Time__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Domain__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Scheduling Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Conditionally_require_Specific_Time</fullName>
        <active>true</active>
        <description>If the &quot;Specific Time&quot; option is selected for Interval, require a Specific Time to be defined</description>
        <errorConditionFormula>ISPICKVAL( Interval__c, &apos;Specific Time&apos; ) &amp;&amp; ISBLANK(  Specific_Time__c )</errorConditionFormula>
        <errorDisplayField>Specific_Time__c</errorDisplayField>
        <errorMessage>If the &quot;Specific Time&quot; option is selected for Interval, you are required to define a Specific Time</errorMessage>
    </validationRules>
</CustomObject>